# av_cpp_ffmpegApi

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Readme.txt
docker/: Dockerfile  docker-compose.yml
lib/FFmpeg/: CMakeLists.txt  Makefile  cmake_install.cmake
src/: check_input_parameters.cpp  check_input_parameters.h  info_video_stream.cpp  info_video_stream.h  main.cpp  save_gray_frame.c  save_gray_frame.cpp  save_gray_frame.h
